2006-10-25  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (assign): Clear lhs index after error.

2006-10-25  David Bateman  <dbateman@free.fr>

	* Sparse.cc (assign (Sparse<LT>&, const Sparse<RT>&)):
	Fix previous patch so it works.

2006-10-25  Michael Goffioul  <michael.goffioul@swing.be>

	* glob-match.h (glob_match::glob_match (const std::string&,
	unsigned int)): Delete initializer for first arg.

	* lo-sysdep.cc (opendir, readdir, rewinddir, closedir):
	New functions.

	* Makefile.in (XTRA_CDEFS, XTRA_CXXDEFS): Substitute here.

	* oct-env.cc (octave_env::do_get_home_directory) [_MSC_VER]: Use
	same code as __MINGW32__.
	* syswait.h [_MSC_VER]: Define HAVE_WAITPID, WAITPID, and WNOHANG
	the same as for __MINGW32__.

	* randpoisson.c: Undefine INFINITE before redefining.

2006-10-24  David Bateman  <dbateman@free.fr>

	* Sparse.cc (assign (Sparse<LT>&, const Sparse<RT>&)): Resize the
	lhs at the point we know the assignment can succeed if the lhs is
	empty.

2006-10-23  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign2): Don't require vector assignments to be oriented.

2006-10-17  John W. Eaton  <jwe@octave.org>

	* lo-cieee.c: If isnan is not available but _isnan is, then define
	isnan to be _isnan, and define HAVE_ISNAN.  Likewise for _finite
	and _copysign.

2006-10-17  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-syscalls.cc (syscalls::waitpid): Always declare and define retval.

	* liboctave/CMatrix.cc (ComplexMatrix::solve): Avoid infinite recursion. 
	* Index: liboctave/CSparse.cc (SparseComplexMatrix::insert): Likewise.

	* oct-types.h.in: Include limits.h, for CHAR_BIT.

2006-10-13  Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in: Adapt rules to use $(LIBPRE).

2006-10-03  David Bateman <dbateman@free.fr>

	* MatrixType.cc (MatrixType::MatrixType): Avoid crash if np == 0
	or p == 0.

2006-10-02  John W. Eaton  <jwe@octave.org>

	* dbleDET.cc (DET::initialize2): Ensure arg to log10 is double.