@@ -1,3 +1,9 @@
+2006-10-26  David Bateman  <dbateman@free.fr>
+
+	* Sparse.cc (Sparse<T>::resize_no_fill (octave_idx_type,
+	octave_idx_type)): Be more careful with the size of the input
+	matrix, and therefore don't create or read non existent data.
+
 2006-10-25  John W. Eaton  <jwe@octave.org>
 
 	* Sparse.cc (assign): Clear lhs index after error.
